# VideoGrabberBot

./: .dockerignore  .env.docker  .env.example  .env.production  .flake8  .gitignore  .nas_deploy.env.example  AGENTS.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  DOCKERGUIDE.md  DOCKER_STUDY_PLAN.md  DS423_DEPLOYMENT.md  Dockerfile  FAILING_TESTS.md  GEM.md  GPT.md  LICENSE  Makefile  NAS_DEPLOY_GUIDE.md  README.md  REFACTORING_PLAN.md  TESTING.md  TODO.md  TODO_NAS_DEPLOY.md  TODO_test.md  deploy.sh  development_plan.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  future_tasks.md  main.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt  run.py  specification.md
bot/: config.py  main.py
bot/handlers/: __init__.py  commands.py  download.py
bot/services/: __init__.py  _download_core.py  _file_delivery.py  downloader.py  formats.py  queue.py  storage.py
bot/telegram_api/: __init__.py  client.py
bot/utils/: __init__.py  db.py  exceptions.py  logging.py
data/: bot.db
scripts/: nas_bootstrap.sh  nas_exec.sh  run_bot.py  test_init.py  test_run.py
tests/: __init__.py  conftest.py  test_auth_security.py  test_command_handlers.py  test_command_handlers_secure.py  test_config.py  test_config_coverage.py  test_db.py  test_download_handlers.py  test_download_handlers_secure.py  test_downloader.py  test_downloader_coverage.py  test_e2e_security.py  test_formats.py  test_handlers.py  test_logging.py  test_main.py  test_queue.py  test_storage.py  test_telegram_client.py  test_url_processing.py
tests/integration/: conftest.py  test_command_interactions.py  test_download_workflow.py  test_error_handling.py
tests/security/: test_auth_security.py  test_command_handlers_secure.py  test_download_handlers_secure.py  test_e2e_security.py
tests/unit/: test_config.py  test_config_coverage.py  test_main.py  test_url_processing.py
tests/unit/handlers/: conftest.py  test_command_handlers.py  test_commands.py  test_download.py
tests/unit/services/: test_downloader.py  test_downloader_coverage.py  test_queue.py  test_storage.py
tests/unit/utils/: test_db.py  test_logging.py
