[project]
name = "VideoGrabberBot"
version = "0.1.0"
description = "Telegram bot for downloading videos and audio from YouTube"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "aiogram>=3.19.0",
    "aiosqlite>=0.21.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.0",
    "yt-dlp>=2025.3.27",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=5.0.0", 
    "pytest-mock>=3.14.0",
    "ruff>=0.11.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["bot"]
omit = ["*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

# Ignore missing stubs for third-party libraries
[[tool.mypy.overrides]]
module = "yt_dlp"
ignore_missing_imports = true

# Ignore aiogram type issues - safe to ignore for this project
# since these are due to internal aiogram types
[[tool.mypy.overrides]]
module = "bot.handlers.*"
disable_error_code = ["union-attr"]

# Ignore specific errors in downloader.py
[[tool.mypy.overrides]]
module = "bot.services.downloader"
disable_error_code = ["call-arg"]

# Ignore test code
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disable_error_code = ["arg-type", "index", "operator", "method-assign", "union-attr"]

# Ignore mypy errors in scripts and main entry point files
[[tool.mypy.overrides]]
module = "scripts.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "run"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "main"
disallow_untyped_defs = false
disallow_incomplete_defs = false
